cmake_minimum_required (VERSION 3.0)
project (des)

function (exec target)
  add_executable(${target} exec/${target}.c src/des.c src/image.c)
  target_include_directories(${target} PRIVATE src)
  target_link_libraries(${target} PRIVATE m)
  if (${CMAKE_CXX_COMPILER_ID} STREQUAL Clang)
    target_compile_options (${target} PRIVATE -Weverything -Wno-c++98-compat)
  elseif (CMAKE_COMPILER_IS_GNUCXX)
    target_compile_options (${target} PRIVATE -Wall -Wextra -pedantic)
  endif ()
endfunction ()
  
exec(encode_image_ecb)
exec(decode_image_ecb)
exec(encode_message)
exec(decode_message)
